# text2sql-qlora

./: .gitignore  README.md  pyproject.toml
data/: eval.jsonl  train.jsonl
deploy/hf-space/: DEPLOY.md  README.md  app.py  requirements.txt
docs/: report.md
notebooks/: 01_data_prep.ipynb  02_train_qlora.ipynb  03_evaluate.ipynb
results/: metrics.json  predictions.json
