[project]
name = "text2sql-qlora"
version = "0.1.0"
description = "QLoRA fine-tune of Qwen2.5-1.5B-Instruct for text-to-SQL"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.2.0",
    "pandas>=2.0",
]

# only needed on the GPU box (Colab), not locally
[project.optional-dependencies]
train = [
    "transformers==4.48.0",
    "trl==0.13.0",
    "peft==0.14.0",
    "bitsandbytes==0.45.0",
    "accelerate==1.2.1",
    "torch>=2.4.0",
]
