[project]
name = "text2sql-qlora"
version = "0.1.0"
description = "QLoRA fine-tune of Qwen2.5-1.5B-Instruct for text-to-SQL"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.2.0",
    "pandas>=2.0",
]

# training deps live as pinned installs inside the Colab notebooks,
# since that's the only place they run
